--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                         <i class="fas fa-phone"></i>
                     </div>
                     <h3>Call Us</h3>
-                    <p>+92 21 1234 5678<br>+92 300 1234 567</p>
+                    <p>+92 302 1024899<br>+92 302 1024899</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">
@@ -1076,7 +1076,7 @@
                     <h4>Contact Info</h4>
                     <ul>
                         <li><a href="#">DHA Phase 2, Karachi</a></li>
-                        <li><a href="tel:+92211234567">+92 21 1234 5678</a></li>
+                        <li><a href="tel:+92 302 1024899">+92 302 1024899</a></li>
                         <li><a href="mailto:info@anayafood.com">info@anayafood.com</a></li>
                     </ul>
                 </div>
